[gd_scene load_steps=2 format=3 uid="uid://bb7qmdx5dfn6j"]

[ext_resource type="Script" path="res://scripts/ui/ResourceButton.gd" id="1_resource_button"]

[node name="ResourceButton" type="Button"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Resource"
script = ExtResource("1_resource_button")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0

[node name="ResourceIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 5

[node name="ResourceInfo" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ResourceName" type="Label" parent="HBoxContainer/ResourceInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Resource Name"
horizontal_alignment = 1

[node name="QuantityLabel" type="Label" parent="HBoxContainer/ResourceInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1

[node name="RateLabel" type="Label" parent="HBoxContainer/ResourceInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "+0/s"
horizontal_alignment = 1
